css/stylization.css
body{
		text-align: left;
		background-image: url(../images/b286a65bfc482ebc7b3138dbb6568b37.jpg);
		background-size: 50%;
		color: #000080;
}

h1{
		position: relative;
		text-align: center;
		font-size: 2.5em;
}

h2{
		position: relative;
		text-align: center;
}

.nav ul {
	  overflow: hidden;
	  list-style-type: none;
	  display: inline-block;
	  padding: 0;
	  margin: 0;
	  position: relative;
	  border-style: inset;
}

.nav ul li {
		float: center;
}

li{
		padding: 0 0 1% 0;
		list-style: square;
		list-style: inside;
}

img {
  width: 50%;
  padding-bottom: 5%;
}

